FIND_PACKAGE(CURL)

ADD_EXECUTABLE(curltest main.c)
IF(CURL_FOUND)
    MESSAGE( "${CURL_INCLUDE_DIR}\n${CURL_LIBRARY}")
    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
ELSE(CURL_FOUND)
    MESSAGE(FATAL_ERROR "CURL library not found")
ENDIF(CURL_FOUND)